--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,17 @@
     <string name="original">Original</string>
     <string name="undistorted">Undistorted</string>
 
+    <!--实例字符串-->
+    <string name="delete">Delete</string>
+    <string name="edit">Edit</string>
+    <string name="menu_next_camera">Next Cam</string>
+    <string name="menu_take_photo">Take Photo</string>
+    <string name="photo_delete_prompt_message">This photo is saved in your Gallery.Do you want to delete it?</string>
+    <string name="photo_delete_prompt_title">Delete photo?</string>
+    <string name="photo_error_message">Failed to save photo</string>
+    <string name="photo_edit_chooser_title">Edit photo with &#8230;</string>
+    <string name="photo_send_chooser_title">Share photo with&#8230;</string>
+    <string name="phtoto_send_extra_subject">My photo from Second Sight</string>
+    <string name="photo_send_extra_text">Check out my photo from the Second Sight app!</string>
+    <string name="share">Share</string>
 </resources>
