--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,8 @@
     <string name="phtoto_send_extra_subject">My photo from Second Sight</string>
     <string name="photo_send_extra_text">Check out my photo from the Second Sight app!</string>
     <string name="share">Share</string>
+
+    <string name="menu_next_curve_filter">Next Curve</string>
+    <string name="menu_next_mixer_filter">Next Mixer</string>
+    <string name="menu_next_convolution_filter">Next Kernel</string>
 </resources>
