开发图像跟踪

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="menu_next_curve_filter">Next Curve</string>
     <string name="menu_next_mixer_filter">Next Mixer</string>
     <string name="menu_next_convolution_filter">Next Kernel</string>
+    <string name="menu_next_image_detection_filter">Next Tracker</string>
 </resources>
